# netcheck

./: Cargo.toml  build.rs
.cargo/: config
src/: cli.rs  main.rs  util.rs
